testdata/baselines/reference/submodule/conformance/dynamicImportDefer(module=nodenext).errors.txt
b.ts(1,1): error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.
b.ts(1,8): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?


==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import.defer("./a.js").then(ns => {
    ~~~~~~~~~~~~
!!! error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.
           ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
      ns.foo();
    });
    